--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,10 +1,63 @@
-<form action="\login" method="post" class="form-horizontal">
-  <h2>Login</h2>
-  <input type="text" name="username" id="" class="form-control" placeholder="Email Address" required="required">
+<%- include('./partials/top.ejs') %>
+
+  <!-- Bakki ka page -->
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top nav-height">
+  <div class="container">
+  <a class="navbar-brand mr-auto " href="#">
+    <img class="img-responsive" src="/img/presence2.png" alt=""></a>
+   </div>
+ </nav>
+
+ 
+<div class="signup-form mt-lg-5">
+  <div class="container mt-5">
+    <div class="row justify-content-center w-100">
+      <div class="col-11 col-sm-10 col-md-8 col-lg-6 thisIsBox">
+    <form action="\login" method="post" class="form-horizontal" >
+		<div class="">
+			<h2>Login</h2>
+		</div>		
+        <div class="form-group">
+			<label class="control-label col-xs-4">Email</label>
+			<div class="">
+                <input type="text" name="username" id="" class="form-control" placeholder="Email Address" required="required">
+            </div>        	
+        </div>
+		<div class="form-group">
+			<label class="control-label col-xs-4">Password</label>
+			<div class="">
+                <input type="password" name="password" id="" class="form-control" placeholder="Password" required="required">
+            </div>        	
+        </div>
+		
+		<div class="form-group">
+			<div class="col-xs-8 col-xs-offset-4">
+				<button type="submit" class="btn btn-primary btn-lg">Login</button>
+			</div>  
+		</div>		      
+    </form>
+  </div>
+    </div>
+	<div class="text-center mt-3">Don't have an account? <a href="/signup">Create one</a></div>
+</div>
+
+</div>
+<br><br><br>
+<hr>
+
+<!-- <div class="footer">
+     <p>Made with ❤️ <br><i class="fa fa-copyright"></i>
+     2020 Copyright, Code Her Things.</p>
+   </div>
+ -->
+
+<div class="foot bg-dark text-light p-3  text-center" style="bottom: 0;">
+  <h5 class="m-0 pb-2">Made with ❤️ by Code Her Things </h5>
+  <h6 class="m-0 py-1"><i class="fa fa-copyright pr-1"></i>2020 Copyright, Code Her Things.</h6>
+</div>
 
 
-  <input type="password" name="password" id="" class="form-control" placeholder="Password" required="required">
+  <!-- Bakki ka page -->
+</body>
+</html>
 
-  <button type="submit" class="btn btn-primary btn-lg">Login</button>
-
-</form>
